# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]

requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool]

[tool.black]

line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
    \.git
    | \.pytest_cache
    | __pycache__
    | htmlcov
  )/
)
'''

[tool.isort]

ensure_newline_before_comments = true
force_single_line = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pccc]

header_length = 50
body_length = 72
rewrap = true
spell_check = false
repair = false

types = [
"build",
"ci",
"docs",
"feat",
"fix",
"perf",
"refactor",
"release",
"style",
"test"
]

scopes = [
"config",
"parser"
]

footers = [
"signed-off-by"
]

required_footers = [
"signed-off-by"
]

[tool.poetry]

authors = ["Jeremy A Gray <jeremy.a.gray@gmail.com>"]
description = "pccc:   the Python Conventional Commit Checker"
name = "pccc"
version = "0.3.2"

[tool.poetry.dependencies]

pyparsing = "^2.4"
toml = "^0.10"

[tool.poetry.dev-dependencies]

black = { version = "*", allow-prereleases = true }
isort = "^5.6"
pre-commit = "^2.9"
pytest = "^6.1"
pytest-black = "^0.3"
pytest-cov = "^2.10"
pytest-flake8 = "^1.0"

[tool.pytest.ini_options]

flake8-max-line-length = 88

flake8-ignore = [
    "* E203, W503",
    "__init__.py F401",
]
