# SPDX-License-Identifier: GPL-3.0-or-later
#
# pccc, the Python Conventional Commit Checker.
# Copyright (C) 2020-2021 Jeremy A Gray <jeremy.a.gray@gmail.com>.

[build-system]

# Setuptools.
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# Poetry.
# requires = ["poetry_core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"

[tool]

[tool.black]

line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
    \.git
    | \.pytest_cache
    | __pycache__
    | htmlcov
  )/
)
'''

[tool.isort]

ensure_newline_before_comments = true
force_single_line = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pccc]

header_length = 50
body_length = 72
rewrap = true
spell_check = false
repair = false

types = [
"build",
"ci",
"depends",
"docs",
"feat",
"fix",
"perf",
"refactor",
"release",
"style",
"test"
]

scopes = [
"config",
"parser"
]

footers = [
"signed-off-by"
]

required_footers = [
"signed-off-by"
]

[tool.poetry]

authors = ["Jeremy A Gray <jeremy.a.gray@gmail.com>"]
description = "pccc:  the Python Conventional Commit Checker"
name = "pccc"
version = "0.3.3"
license = "GPL-3.0-or-later"
maintainers = ["Jeremy A Gray <jeremy.a.gray@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/jeremyagray/pccc"
repository = "https://github.com/jeremyagray/pccc"

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Version Control :: Git",
]

packages = [
  { include = "pccc" },
]

includes = [
  "README.rst",
  "LICENSE.rst",
  "pccc.toml",
  "docs/**/*",
]

[tool.poetry.dependencies]

pyparsing = "^2.4"
python = "^3.9"
toml = "^0.10"

[tool.poetry.dev-dependencies]

black = { version = "*", allow-prereleases = true }
isort = "^5.6"
pre-commit = "^2.9"
pytest = "^6.1"
pytest-black = "^0.3"
pytest-cov = "^2.10"
pytest-flake8 = "^1.0"

[tool.poetry.scripts]

pccc = "pccc:main"

[tool.pytest.ini_options]

flake8-max-line-length = 88

flake8-ignore = [
    "* E203, W503",
    "__init__.py F401",
]
