# SPDX-License-Identifier: GPL-3.0-or-later
#
# pccc, the Python Conventional Commit Checker.
# Copyright (C) 2020-2021 Jeremy A Gray <jeremy.a.gray@gmail.com>.

[flake8]

max-complexity = 20
max-line-length = 88
extend-ignore = E203, W503
    __init__.py F401

[metadata]

author = Jeremy A Gray
author_email = jeremy.a.gray@gmail.com
description = Python Conventional Commit Checker
license = GPL-3.0-or-later
license_file = LICENSE.rst
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Jeremy A Gray
maintainer_email = jeremy.a.gray@gmail.com
name = pccc
url = https://github.com/jeremyagray/pccc
version = 0.4.0

project_urls =
  Issues = https://github.com/jeremyagray/pccc/issues
  Documentation = https://pccc.readthedocs.io/
  Repository = https://github.com/jeremyagray/pccc

classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Intended Audience :: Developers
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Software Development :: Version Control :: Git

[options]

packages = pccc
# include_package_data = True

install_requires =
  pyparsing
  toml

tests_require =
  pyfakefs
  pytest
  pytest-black
  pytest-cov
  pytest-flake8
  pytest-pydocstyle

[options.entry_points]

console_scripts =
  pccc = pccc:main
