# ******************************************************************************
#
# pccc, the Python Conventional Commit Checker.
#
# Copyright 2020-2022 Jeremy A Gray <gray@flyquackswim.com>.
#
# SPDX-License-Identifier: GPL-3.0-or-later
#
# ******************************************************************************

[metadata]

author = Jeremy A Gray
author_email = gray@flyquackswim.com
description = Python Conventional Commit Checker
license = GPL-3.0-or-later
license_file = LICENSE.rst
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Jeremy A Gray
maintainer_email = gray@flyquackswim.com
name = pccc
url = https://github.com/jeremyagray/pccc
version = 0.4.8

project_urls =
  Issues = https://github.com/jeremyagray/pccc/issues
  Documentation = https://pccc.readthedocs.io/
  Repository = https://github.com/jeremyagray/pccc

classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Intended Audience :: Developers
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Software Development :: Version Control :: Git

[options]

packages = pccc

install_requires =
  bespon
  pyparsing
  pyparsing
  ruamel.yaml
  toml
  toml

tests_require =
  black
  factory-boy
  flake8
  flake8-docstrings
  hypothesis
  isort
  pyfakefs
  pytest
  pytest-cov

[options.entry_points]

console_scripts =
  pccc = pccc:main
